# I_Agreed-ECS

./: .gitmodules  LICENSE  README.md
src/: App.hpp  CMakeLists.txt  Component.hpp  Entity.hpp  IAecs.hpp  Sprite.hpp  System.hpp  World.hpp  constants.hpp  main.cpp
src/Components/: Components.hpp  Display.hpp  Transform.hpp
src/Entities/: Entities.hpp  Player.hpp
src/Systems/: Render.hpp  Systems.hpp
